--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".service.VolleyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -47,7 +48,7 @@
 
         <activity
             android:name=".activity.LocationStoreActivity"
-            android:label="@string/title_activity_location_store"></activity>
+            android:label="@string/title_activity_location_store" />
     </application>
 
 </manifest>
